# toypatch

./: Cargo.toml  LICENSE.txt
src/: common.rs  diff.rs  patch.rs
