[package]
name = "toyrust"
version = "0.1.0"
authors = ["Amyspark <amy@amyspark.me>"]
edition = "2018"
license = "BSD-3-Clause"

[[bin]]
name = "diff"
path = "src/diff.rs"

[[bin]]
name = "patch"
path = "src/patch.rs"

[dependencies]
anyhow = "1.0.42"
atty = "0.2.14"
clap = { version = "3.0.14", features = ["derive", "unicode", "wrap_help"] }
log = "0.4.14"
peeking_take_while = "0.1.2"
structopt = "0.3"
termcolor = "1.1.2"
walkdir = "2.3.2"
